chore: upgrades to java 17