@@ -12,6 +12,7 @@ import java.nio.charset.CharsetEncoder;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.List;
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
@@ -76,10 +77,8 @@ public class Encoding extends LessonAdapter
     private final static String KEY = "key";
 
     // local encoders
-
-    private static sun.misc.BASE64Decoder decoder = new sun.misc.BASE64Decoder();
-
-    private static sun.misc.BASE64Encoder encoder = new sun.misc.BASE64Encoder();
+    private static Base64.Decoder decoder = Base64.getDecoder();
+    private static Base64.Encoder encoder = Base64.getEncoder();
 
     // encryption constant
 
@@ -99,7 +98,7 @@ public class Encoding extends LessonAdapter
     public static String base64Decode(String str) throws IOException
     {
 
-        byte[] b = decoder.decodeBuffer(str);
+        byte[] b = decoder.decode(str);
 
         return (new String(b));
     }
@@ -147,7 +146,7 @@ public class Encoding extends LessonAdapter
 
         byte[] b = str.getBytes();
 
-        return (encoder.encode(b));
+        return (encoder.encodeToString(b));
     }
 
     /**
@@ -161,7 +160,7 @@ public class Encoding extends LessonAdapter
     public static String base64Encode(byte[] b)
     {
 
-        return (encoder.encode(b));
+        return (encoder.encodeToString(b));
     }
 
     /**
@@ -330,7 +329,7 @@ public class Encoding extends LessonAdapter
 
             passwordDecryptCipher.init(Cipher.DECRYPT_MODE, k, ps);
 
-            byte[] dec = decoder.decodeBuffer(str);
+            byte[] dec = decoder.decode(str);
 
             byte[] utf8 = passwordDecryptCipher.doFinal(dec);
 
@@ -379,7 +378,7 @@ public class Encoding extends LessonAdapter
 
             byte[] enc = passwordEncryptCipher.doFinal(utf8);
 
-            return encoder.encode(enc);
+            return encoder.encodeToString(enc);
         }
 
         catch (Exception e)
@@ -428,7 +427,7 @@ public class Encoding extends LessonAdapter
         return "This lesson will familiarize the user with different encoding schemes.  ";
     }
 
-    private final static Integer DEFAULT_RANKING = new Integer(15);
+    private final static Integer DEFAULT_RANKING = Integer.valueOf(15);
 
     protected Integer getDefaultRanking()
     {
